--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 .grid{
+  width: 200px;
+  height: 400px;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: pink;
 
+}
+
+.grid div{
+  height: 20px;
+  width: 20px;
+  background-color: purple;
 }
