--- a/style.css
+++ b/style.css
@@ -11,8 +11,12 @@
 }
 
 .grid div{
-  height: 20px;
-  width: 20px;
+  /*height: 20px;
+  width: 20px;*/
+  height: 18px;
+  width: 18px;
+  border-style: outset;
+  border-width: 1px;
 }
 
 .pieces {
