--- a/style.css
+++ b/style.css
@@ -10,9 +10,12 @@
   background-color: black;
 }
 
-.grid div{
-  /*height: 20px;
-  width: 20px;*/
+.noBorder{
+  height: 20px;
+  width: 20px;
+}
+
+.border {
   height: 18px;
   width: 18px;
   border-style: outset;
